@@ -55,7 +55,11 @@ us a note on ns-developers mailing list.</p>
 
 <h2>New API:</h2>
 <ul>
-  <li>Time attributes can now be bounded.  See attribute-test-suite.cc for an example.</li>
+  <li>Time attributes can now be bounded.  See attribute-test-suite.cc
+      for an example.</li>
+  <li>New generic hash function interface.  Two hash functions are provided:
+      murmur3 (default), and the venerable FNV1a.  See the Hash Functions
+      section in the Manual.</li>
 </ul>
 
 <h2>Changes to existing API:</h2>
